--- a/imoocTest/element.properties
+++ b/imoocTest/element.properties
@@ -4,3 +4,5 @@ autoLoginButton=className>auto-cbx
 loginButtons=className>moco-btn-red
 header=id>header-avator
 userInfo=className>name
+#homepage
+login=id>js-signin-btn
