--- a/imoocTest/element.properties
+++ b/imoocTest/element.properties
@@ -6,3 +6,15 @@ header=id>header-avator
 userInfo=className>name
 #homepage
 login=id>js-signin-btn
+
+#courseDetail
+buyNow = id>buy-trigger
+courseInfo = className>path
+courseInfoText = tagName>span
+sureOrder = linkText>\u63D0\u4EA4\u8BA2\u5355
+order = className>order
+orderCourse = className>item-left
+orderCourseNode = tagName>dt
+addCart = className>sz-shopping-cart
+shopCart = id>shop-cart
+cartNum = className>js-cart-num
