模态框处理购物车已经有商品
模态框处理购物车已经有商品

--- a/imoocTest/element.properties
+++ b/imoocTest/element.properties
@@ -18,3 +18,6 @@ orderCourseNode = tagName>dt
 addCart = className>sz-shopping-cart
 shopCart = id>shop-cart
 cartNum = className>js-cart-num
+readyBuy = className>moco-modal-layer
+readyBuySure = className>moco-modal-inner
+readyBuySureNode = tagName>span
