确认订单页面和支付中心页面的pageObject
确认订单页面和支付中心页面的pageObject

--- a/imoocTest/element.properties
+++ b/imoocTest/element.properties
@@ -15,9 +15,20 @@ sureOrder = linkText>\u63D0\u4EA4\u8BA2\u5355
 order = className>order
 orderCourse = className>item-left
 orderCourseNode = tagName>dt
-addCart = className>sz-shopping-cart
+addCart = xpath>html/body/div[2]/div[2]/div/div[3]/a[2]
 shopCart = id>shop-cart
 cartNum = className>js-cart-num
-readyBuy = className>moco-modal-layer
-readyBuySure = className>moco-modal-inner
-readyBuySureNode = tagName>span
+alreadyBuy = className>moco-modal-layer
+alreadyBuySure = className>moco-modal-inner
+alreadyBuySureNode = tagName>span
+
+#sureOrder
+submitOrder = className>js-pay-submit
+
+#payCenter
+orderText = className>order
+orderCourse = className>item-left
+orderCourseNode = tagName>dt
+alipay = className>alipay
+wxPay = className>wxpay
+orderPay = className>pay-summary-submit
