--- a/imoocTest/.classpath
+++ b/imoocTest/.classpath
@@ -22,7 +22,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/AutoTest/GitHub/SeleniumAutoTest/imoocTest/lib/saxon-8.7.jar"/>
-	<classpathentry kind="lib" path="D:/AutoTest/GitHub/SeleniumAutoTest/imoocTest/lib/SaxonLiaison.jar"/>
+	<classpathentry kind="lib" path="E:/autotest/Workspaces/GitHub/SeleniumAutoTest/imoocTest/lib/saxon-8.7.jar"/>
+	<classpathentry kind="lib" path="E:/autotest/Workspaces/GitHub/SeleniumAutoTest/imoocTest/lib/SaxonLiaison.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
