--- a/imoocTest/.classpath
+++ b/imoocTest/.classpath
@@ -24,5 +24,10 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="E:/autotest/Workspaces/GitHub/SeleniumAutoTest/imoocTest/lib/saxon-8.7.jar"/>
 	<classpathentry kind="lib" path="E:/autotest/Workspaces/GitHub/SeleniumAutoTest/imoocTest/lib/SaxonLiaison.jar"/>
+	<classpathentry kind="lib" path="E:/autotest/Workspaces/GitHub/SeleniumAutoTest/imoocTest/lib/activation.jar"/>
+	<classpathentry kind="lib" path="E:/autotest/Workspaces/GitHub/SeleniumAutoTest/imoocTest/lib/commons-email-1.2.jar"/>
+	<classpathentry kind="lib" path="E:/autotest/Workspaces/GitHub/SeleniumAutoTest/imoocTest/lib/mail.jar"/>
+	<classpathentry kind="lib" path="E:/autotest/Workspaces/GitHub/SeleniumAutoTest/imoocTest/lib/commons-email-1.2-javadoc.jar"/>
+	<classpathentry kind="lib" path="E:/autotest/Workspaces/GitHub/SeleniumAutoTest/imoocTest/lib/commons-email-1.2-sources.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
